# dynautic

./: .gitignore  .gitmodules  CMakeLists.txt  clang-format  format.sh
include/dynautic/: A64.hpp  common.hpp  optimization.hpp  optimization_flags.hpp
native-tests/: CMakeLists.txt  common.hpp  dynautic.hpp  native.hpp  test.cpp  timer.hpp
src/: arch_traits.hpp  globalmonitor.cpp  globalmonitor.hpp  llvm.hpp  minicoro.h  timer.hpp
src/A64/: cache.cpp  cache.hpp  lifter.cpp  lifter.hpp  lifter_conditions.cpp  lifter_glue_emitters.cpp  lifter_instance.cpp  lifter_instance.hpp  lifter_instructions.cpp  lifter_instructions.hpp  lifter_instructions_base.cpp  lifter_instructions_fp.cpp  lifter_instructions_macros.hpp  lifter_instructions_vector.cpp  lifter_registers.cpp  lifter_shifts.cpp  lifter_trampolines.cpp  runtime.cpp  runtime.hpp
tests/: CMakeLists.txt  addrs.hpp  common.hpp  dynarmic.hpp  dynautic.hpp  races.cpp  test.cpp  unicorn.hpp
tests/bins/: allatomics.s  arithmetic.c  arithmetic.c-O0.asm  arithmetic.c-O3.asm  arithmetic_const.c  arithmetic_const.c-O0.asm  arithmetic_const.c-O3.asm  arithmetic_signed.c  arithmetic_signed.c-O0.asm  arithmetic_signed.c-O3.asm  atomics.s  binary.ld  brainfuck-simple.c  brainfuck-simple.c-O0.asm  brainfuck-simple.c-O3.asm  brainfuck.c  brainfuck.c-O0.asm  brainfuck.c-O3.asm  build.sh  clz.s  clz.s-O0.asm  clz.s-O3.asm  empty.c  empty.c-O0.asm  empty.c-O3.asm  exclusive_abuse.s  exclusive_abuse.s-O0.asm  exclusive_abuse.s-O3.asm  exclusive_load_store.s  exclusive_load_store.s-O0.asm  exclusive_load_store.s-O3.asm  fractal.c  fractal.c-O0.asm  fractal.c-O3.asm  functions.c  functions.c-O0.asm  functions.c-O3.asm  functions64.c  functions64.c-O0.asm  functions64.c-O3.asm  (+15 more)
tests/bins/disabled/: brainfuck.c  minivec.c  vectorization.c
tests/bins/lib/: mem*.c
tests/bins/races/: build.sh  counting.s  simple.s
